# resnet_ablation

./: ChatGPT-ResNet 项目构建.md  README.md  pyproject.toml  requirements.txt  run_all.sh
configs/: cifar100_resnet56_se_mix.yaml  cifar10_resnet110_optionA.yaml  cifar10_resnet20.yaml  cifar10_resnet20_se.yaml  cifar10_resnet20_se_ecadrop_mix.yaml  cifar10_resnet56_ablate_optionB.yaml  imagenet_resnet101_deepstem_resnetd_eca_dpr.yaml  imagenet_resnet50.yaml  imagenet_resnet50_baseline.yaml  imagenet_resnet50_deepstem_resnetd_se.yaml
resnet_ablation/: augment.py  config.py  data.py  logger.py  losses.py  metrics.py  utils.py
resnet_ablation/engine/: evaluator.py  trainer.py
resnet_ablation/models/: __init__.py  blocks.py  factory.py  resnet_cifar.py  resnet_imagenet.py
scripts/: eval.py  train.py
