[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resnet-ablation"
version = "0.1.0"
description = "Pluggable ResNet ablation project with PyTorch, TensorBoard, Loguru"
authors = [{name = "Your Team"}]
requires-python = ">=3.9"
dependencies = [
  "torch>=2.2.0",
  "torchvision>=0.17.0",
  "tensorboard>=2.12.0",
  "loguru>=0.7.0",
  "pyyaml>=6.0.1",
  "tqdm>=4.66.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["resnet_ablation*"]